# NonLinearOptimalControl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake_conan/: conan.cmake
src/optimalControl/: CMakeLists.txt  optimalControl.cpp  optimalControl.h  simulator.h  systemBehavior.h
src/optimalControl/constraints/: weightedL2.h
src/optimalControl/integrators/: explicit_euler.h  runga_kutta.h
src/optimalControl/mode/: singleShot.h
src/runtimeAd/: CMakeLists.txt  runtimeAd.cpp  runtimeAd.h
src/runtimeAd/expression/: abs.h  constant.h  div.h  expression.h  geometric.h  operators.h  prod.h  sub.h  sum.h  variable.h
test/optimalControlTests/: CMakeLists.txt  cart.cpp  cart_casadi.ipynb
test/runtimeAdTests/: CMakeLists.txt  absTests.cpp  divTests.cpp  geoTests.cpp  prodTests.cpp  recursiveFunctionTests.cpp  sumTests.cpp  wikiExampleTests.cpp
